namespace NoSurrender
{
    public struct GameConsts
    {
        // TAGS
        public const string HERO = "Hero";
        public const string OBSTACLE = "Obstacle";
        public const string BULLET = "Bullet";
        public const string ENEMY_HERO = "EnemyHero";
        
        // Animations
        public const string RIGHT = "Right";
        public const string LEFT = "Left";
        public const string DIE = "Die";
        public const string ATTACK = "Attack";
    }
}